Import of FRODWITH/Monkey-Patch-0.03 from CPAN.
gitpan-cpan-distribution: Monkey-Patch
gitpan-cpan-version:      0.03
gitpan-cpan-path:         FRODWITH/Monkey-Patch-0.03.tar.gz
gitpan-cpan-author:       FRODWITH
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -12,4 +12,8 @@ meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Monkey-Patch
-version: 0.02
+requires:
+  Exporter: 0
+  SUPER: 0
+  Sub::Delete: 0
+version: 0.03
